Renamed and refined css-variables. Updated css for new variables. Set page to always show scrollbar to prevent content shift. Added network setting to vite.config.ts so that we can view frontend on phones.

--- a/client/src/components/Footer/footer.css
+++ b/client/src/components/Footer/footer.css
@@ -1,5 +1,5 @@
 .footer {
-    background-color: var(--black);
+    background-color: var(--bg-dark);
     padding: var(--spacing-xl);
 }
 
@@ -9,13 +9,13 @@
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: var(--spacing-m);
-    color: var(--primary-bg);
+    color: var(--color-white);
     position: relative;
     padding-bottom: var(--spacing-xl);
 }
 
 .footer__logo {
-    font-size: var(--text-font-xl);
+    font-size: var(--font-size-xl);
     font-family: var(--logo-font);
     text-align: center;
     margin-bottom: var(--spacing-m);
@@ -30,12 +30,12 @@
 
 .footer__list-title {
     font-family: var(--title-font);
-    font-size: var(--text-font-l);
+    font-size: var(--font-size-l);
     margin-bottom: var(--spacing-s);
 }
 
 .footer__list-item {
-    font-size: var(--text-font-m);
+    font-size: var(--font-size-m);
     font-family: var(--bread-font);
     margin-bottom: 0.5rem;
 }
