--- a/client/src/components/ProductList/productList.css
+++ b/client/src/components/ProductList/productList.css
@@ -1,12 +1,12 @@
 .product-list {
-    border: 4px solid var(--black);
-    border-radius: .5rem;
+    border: 4px solid var(--color-black);
+    border-radius: .5;
     position: relative;
     margin-top: var(--spacing-m);
     width: 100%;
     padding: var(--spacing-m);
     padding-top: var(--spacing-l);
-    background-color: var(--primary-bg);
+    background-color: var(--bg-primary);
 }
 
 .product-list--left {
@@ -18,13 +18,13 @@
 }
 
 .product-list__title {
-    font-size: var(--text-font-xl);
+    font-size: var(--font-size-xl);
     width: fit-content;
     position: absolute;
     left: var(--spacing-m);
     top: 0;
     transform: translateY(calc(-50% - 4px));
-    background-color: var(--primary-bg);
+    background-color: var(--bg-primary);
 }
 
 .product-list__menu-list {
