--- a/client/src/components/ProductListItem/productListItem.css
+++ b/client/src/components/ProductListItem/productListItem.css
@@ -7,7 +7,7 @@
 }
 
 .product-list-item__title {
-    font-size: var(--text-font-l);
+    font-size: var(--font-size-l);
     font-family: var(--title-font);
     margin-bottom: var(--spacing-s);
     grid-column: span 8;
@@ -18,7 +18,7 @@
     display: flex;
     flex-wrap: wrap;
     gap: 0.25rem;
-    font-size: var(--text-font-m);
+    font-size: var(--font-size-m);
     font-family: var(--bread-font);
     list-style: none;
 }
